@@ -54,9 +54,13 @@
     <jacoco.skip>false</jacoco.skip>
     <!-- Configures the Java 9+ run to perform the required module exports, opens, and reads that are necessary for testing but shouldn't be part of the module-info. -->
     <javaModulesSurefireArgLine>
+      --add-exports com.azure.core/com.azure.core.implementation.http=ALL-UNNAMED
+
       --add-opens com.azure.communication.identity/com.azure.communication.identity=ALL-UNNAMED
       --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
-      --add-exports com.azure.core/com.azure.core.implementation.http=ALL-UNNAMED
+
+      --add-reads com.azure.communication.identity=com.azure.core.http.jdk
+      --add-reads com.azure.communication.identity=com.azure.core.http.vertx
     </javaModulesSurefireArgLine>
   </properties>
 
